Fixed H3 styling and Learn More & API docs pgs' copy alignments

--- a/src/static/less/pages/explore.less
+++ b/src/static/less/pages/explore.less
@@ -56,7 +56,10 @@
   //.transparent();
   
   h2 {
-    margin-top: 50px;
+    margin-top: 40px;
+    padding-bottom: 5px;
+    .avenir-next-demi;
+    font-size: 1.5em;
   }
 
   &.ready {
